# weedbot_ros

./: README.md  frames_2025-10-02_17.24.46.gv  frames_2025-10-10_09.58.36.gv  frames_2025-10-13_18.00.23.gv  frames_2025-10-15_16.00.48.gv  frames_2025-10-15_16.34.27.gv
install/: local_setup.sh  setup.sh
install/fast_lio/lib/fast_lio/: fastlio_mapping
install/fast_lio/share/fast_lio/: local_setup.sh  package.sh
install/gps_goal_sender/share/gps_goal_sender/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
install/livox_sdk2/share/livox_sdk2/: package.sh
install/my_octomap/share/my_octomap/: package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
log/: latest_build
src/FAST_LIO_ROS2/src/: laserMapping.cpp  preprocess.cpp
src/gps_goal_sender/: setup.py
src/gps_goal_sender/launch/: gps_goal_sender.launch.py
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/livox_ros_driver2/log/: latest_build
src/livox_ros_driver2/src/: lddc.cpp
src/my_octomap/: setup.cfg  setup.py
src/nmea_navsat_driver/config/: nmea_serial_driver.yaml
src/nmea_navsat_driver/launch/: nmea_serial_driver.launch.py
src/octomap/: setup.py
src/octomap/config/: nav2_params.yaml
src/octomap/launch/: my_octomap.launch.py
src/pwm_ctrl/: package.xml  setup.cfg  setup.py
src/pwm_ctrl/pwm_ctrl/: servo_pwm_node.py
(+42 files in other folders)
