<?xml version="1.0"?>
<package format="3">
  <name>gps_goal_sender</name>
  <version>0.0.1</version>
  <description>Send Nav2 NavigateToPose goals from latitude/longitude using LocalCartesian</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf-transformations</exec_depend>
  <exec_depend>python3-geographiclib</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

